@@ -403,6 +403,18 @@ function parseXML(xml) {
     };
   });
 
+  // then the icons
+  $('meta > icons icon-definition', xml).each(
+    function(i) {
+      var $this = $(this);
+      var name = $this.attr('name');
+      var uri = $this.attr('uri');
+      var style = $this.attr('style');
+      var type = $this.attr('type');
+      var flavour = $this.attr('flavour');
+      icons.insert(name, uri, type, flavour, style);
+    });
+
   // then the mappings
   $('meta > mappings mapping', xml).each(
       function(i) {
